gateway/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vidcrop-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vidcrop-gateway
  template:
    metadata:
      labels:
        app: vidcrop-gateway
    spec:
      containers:
      - name: vidcrop-gateway
        image: vidcrop-gateway
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
