gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vidcrop-gateway-service
spec:
  selector:
    app: vidcrop-gateway
  ports:
    - protocol: TCP
      port: 81
      targetPort: 3000
  type: ClusterIP
