gateway/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vidcrop-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - host: vidcrop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vidcrop-gateway-service
            port:
              number: 81
      - path: /minio-api
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
      - path: /minio-console
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9001
